--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,11 @@
   --white: #fff;
   --green-active: #23b7a4;
   --gray-nav: #a4aead;
-  --gray-desc: #ccd0d7;
+  --gray-text: #ccd0d7;
+  --black-nav: #1d2126;
+  --gray-hover: #5b6168;
+  --gray-blue-bg: #3a454d;
+  --gray-border: #e1e6ea;
 }
 
 * {
@@ -11,10 +15,12 @@
   padding: 0;
   outline: none;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 a {
   text-decoration: none;
+  text-transform: uppercase;
 }
 
 ol, ul {
@@ -23,6 +29,160 @@ ol, ul {
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+html::-webkit-scrollbar {
+  display: none;
+}
+
+h2, h3 {
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+p {
+  font-size: 16px;
+}
+
+.about, .welcome {
+  margin: 8rem 35rem;
+  padding: 0 3rem;
+}
+
+#welcome {
+  position: relative;
+}
+
+.welcome {
+  position: absolute;
+}
+
+.welcome__desc > a {
+  padding: 1.5rem 2rem;
+  text-transform: uppercase;
+  color: var(--white);
+  border: 2px solid var(--white);
+  border-radius: 5px;
+  background-color: transparent;
+  font-size: 14px;
+}
+
+.container {
+  max-width: 100%;
+}
+
+nav {
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--black-nav);
+}
+nav .brand {
+  margin-left: 36.5rem;
+}
+nav .brand__logo {
+  padding: 1.5rem;
+}
+nav .navbar {
+  margin-right: 36.5rem;
+}
+nav .navbar > li {
+  display: inline-block;
+}
+nav .navbar__link {
+  line-height: 8rem;
+  padding: 0.8rem 1rem;
+  font-size: 14px;
+  color: var(--gray-nav);
+  border: 2px solid transparent;
+}
+nav .navbar__link:hover {
+  border-color: var(--gray-hover);
+  border-radius: 5px;
+}
+nav .navbar--active {
+  border: 2px solid var(--green-active);
+  border-radius: 5px;
+  color: var(--green-active);
+}
+
+#welcome {
+  display: flex;
+  justify-content: unset;
+  align-items: center;
+  height: 66rem;
+  background: var(--gray-blue-bg) url(../img/bg/root-bg.jpg) no-repeat center center/cover;
+}
+
+.welcome__desc {
+  width: 50%;
+}
+.welcome__desc > h2 {
+  color: var(--white);
+  margin-bottom: 3rem;
+}
+.welcome__desc > p {
+  color: var(--gray-text);
+  line-height: 2.4rem;
+  margin-bottom: 3.5rem;
+}
+.welcome__desc > a:hover {
+  background-color: var(--green-active);
+  border-color: var(--green-active);
+}
+.welcome__desc > a:nth-child(3) {
+  margin-right: 0.5rem;
+}
+.welcome__desc > a:nth-child(4) {
+  margin-left: 0.5rem;
+}
+
+#about {
+  border: 1px solid #dde1e4;
+}
+
+.about > h2 {
+  border-left: 10px solid var(--gray-border);
+  padding-left: 1.5rem;
+  margin-bottom: 6rem;
+}
+
+.about-content {
+  display: flex;
+  justify-content: unset;
+  align-items: unset;
+}
+.about-content-desc {
+  width: 60%;
+}
+.about-content-desc__prag {
+  margin-bottom: 3.5rem;
+}
+.about-content-desc__socials {
+  margin-top: 1.5rem;
+}
+.about-content-desc__socials > ul > li {
+  display: inline-block;
+  background-color: #c8cdd0;
+  height: 6rem;
+  width: 6rem;
+  text-align: center;
+}
+.about-content-desc__socials > ul > li > a {
+  line-height: 6rem;
+  padding: 2rem;
+}
+.about-content-desc__socials > ul > li:hover {
+  background-color: #d0d5d9;
+}
+.about-content__list {
+  width: 40%;
 }
 
 /*# sourceMappingURL=style.css.map */
