--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -3,13 +3,29 @@
   padding: 0;
   outline: none;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 a{
   text-decoration: none;
+  text-transform: uppercase;
 }
 ol, ul{
   list-style: none;
 }
 html{
   font-size: 62.5%;
+  scroll-behavior: smooth;
+  &::-webkit-scrollbar{
+    display: none;
+  }
+}
+h2, h3{
+  text-transform: uppercase;
+  font-weight: 700;
+}
+h2{
+  font-size: 36px;
+}
+p{
+  font-size: 16px;
 }
