--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -3,5 +3,9 @@
     --white: #fff;
     --green-active: #23b7a4;
     --gray-nav: #a4aead;
-    --gray-desc: #ccd0d7;
+    --gray-text: #ccd0d7;
+    --black-nav: #1d2126;
+    --gray-hover: #5b6168;
+    --gray-blue-bg: #3a454d;
+    --gray-border: #e1e6ea;
 }
