--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -1,11 +1,12 @@
 :root{
-    --black: #000;
-    --white: #fff;
-    --green-active: #23b7a4;
-    --gray-nav: #a4aead;
-    --gray-text: #ccd0d7;
-    --black-nav: #1d2126;
-    --gray-hover: #5b6168;
-    --gray-blue-bg: #3a454d;
-    --gray-border: #e1e6ea;
+  --black: #000;
+  --white: #fff;
+  --green-active: #23b7a4;
+  --gray-nav: #a4aead;
+  --gray-text: #ccd0d7;
+  --black-nav: #1d2126;
+  --gray-hover: #5b6168;
+  --gray-blue-bg: #3a454d;
+  --gray-border: #e1e6ea;
+  --black-title: #292f36;
 }
