--- a/scss/param.scss
+++ b/scss/param.scss
@@ -1,26 +1,45 @@
 @mixin flex($justify, $align) {
-    display: flex;
-    justify-content: $justify;
-    align-items: $align;
+  display: flex;
+  justify-content: $justify;
+  align-items: $align;
 }
 %block-content {
-    margin: 8rem 35rem;
-    padding: 0 3rem;
+  margin: 8rem 35rem;
+  padding: 0 3rem;
 }
 
 %pos-relative {
-    position: relative;
+  position: relative;
 }
 
 %pos-absolute {
-    position: absolute;
+  position: absolute;
 }
 %link {
-    padding: 1.5rem 2rem;
-    text-transform: uppercase;
-    color: var(--white);
-    border: 2px solid var(--white);
-    border-radius: 5px;
-    background-color: transparent;
-    font-size: 14px;
+  padding: 1.5rem 2rem;
+  text-transform: uppercase;
+  color: var(--white);
+  border: 2px solid var(--white);
+  border-radius: 5px;
+  background-color: transparent;
+  font-size: 14px;
+}
+%font-s16{
+  font-size: 16px;
+}
+%font-s14{
+  font-size: 14px;
+}
+%font-family-Quattrocento{
+  font-family: 'Quattrocento Sans';
+}
+%border-title{
+  border-left: 10px solid var(--gray-border);
+  padding-left: 1.5rem;
+  margin-bottom: 6rem;
+}
+@mixin title($color) {
+  color: $color;
+  @extend %border-title;
+  @extend %font-family-Quattrocento;
 }
