--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -3,7 +3,7 @@
   padding: 0;
   outline: none;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 a{
   text-decoration: none;
