--- a/scss/param.scss
+++ b/scss/param.scss
@@ -4,8 +4,8 @@
   align-items: $align;
 }
 %block-content {
-  margin: 8rem 35rem;
-  padding: 0 3rem;
+  margin: 0 35rem;
+  padding: 8rem 3rem;
 }
 
 %pos-relative {
@@ -24,6 +24,10 @@
   background-color: transparent;
   font-size: 14px;
 }
+%link-hover{
+  background-color: var(--green-active);
+  border-color: var(--green-active);
+}
 %font-s16{
   font-size: 16px;
 }
@@ -38,8 +42,59 @@
   padding-left: 1.5rem;
   margin-bottom: 6rem;
 }
+%d-block{
+  display: block;
+}
+%contact-form{
+  padding: 10px;
+  line-height: 30px;
+  @extend %font-s14;
+  text-transform: uppercase;
+  @extend %font-family-Quattrocento;
+}
+%contact-input{
+  background-color: #eaeef1;
+  border-radius: 5px;
+  @extend %font-s14;
+  width: 100%;
+  height: 25px;
+}
+%contact-textarea{
+  background-color: #eaeef1;
+  border-radius: 5px;
+  @extend %font-s14;
+}
 @mixin title($color) {
   color: $color;
   @extend %border-title;
   @extend %font-family-Quattrocento;
+}
+@mixin work-bg($img){
+  background-image: url(../img/bg/lovely/#{$img}.jpg);
+  background-repeat: no-repeat;
+  margin-bottom: 3rem;
+  position: relative;
+  &>.mask{
+    position: absolute;
+    background-color: rgba(41, 47, 54, .5);
+    height: 100%;
+    width: 100%;
+    &>img{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    &>p {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding: 2rem;
+      background-color: #292f36;
+      width: 100%;
+      color: var(--white);
+      font-size: 18px;
+      text-transform: uppercase;
+    }
+  }
 }
